--- a/style.css
+++ b/style.css
@@ -32,9 +32,12 @@
 #loc-div {
     height: 79px;
     width: 100px;
-    /* border: 1px solid black; */
     display: flex;
     align-items: center;
+}
+
+#loc-div:hover {
+    border: 1px solid white;
 }
 
 #loc-div>p {
@@ -79,11 +82,14 @@
 }
 
 .fa-magnifying-glass {
-    /* border: 1px solid black; */
     width: 18px;
     height: 10px;
     padding: 19px;
     background-color: #febd69;
+}
+
+.fa-magnifying-glass:hover {
+    border: 1px solid #febd69;
 }
 
 #EAOC {
@@ -104,9 +110,12 @@
 .EAOC-cat {
     height: 50px;
     width: auto;
-    /* border: 1px solid black; */
     display: flex;
 
+}
+
+.EAOC-cat:hover {
+    border: 1px solid white;
 }
 
 #Flag {
@@ -119,10 +128,12 @@
 .EAOC-cat-mod {
     height: 30px;
     width: auto;
-    /* border: 1px solid black; */
     padding: 10px;
     text-align: left;
+}
 
+.EAOC-cat-mod:hover {
+    border: 1px solid white;
 }
 
 .EAOC-cat-mod>label {
@@ -170,61 +181,279 @@
     /* border:1px solid black; */
     color: white;
 }
-#below-nav{
-    height:40px;
-    width:100%;
-    border:1px solid black;
+
+#below-nav {
+    height: 40px;
+    width: 100%;
+    border: 1px solid black;
     display: flex;
     background-color: #232f3e;
 }
-#LineBar{
-    height:40px;
-    width:60px;
+
+#LineBar {
+    height: 40px;
+    width: 60px;
     margin-left: 25px;
-    border:1px solid black;
     display: flex;
 }
-.fa-bars{
-    height:10px;
-    width:20px; 
-    padding: 12px 5px;  
-    margin-top: 5px; 
+
+#LineBar:hover {
+    border: 1px solid white;
+}
+
+.fa-bars {
+    height: 10px;
+    width: 20px;
+    padding: 12px 5px;
+    margin-top: 5px;
     color: white;
     /* border:1px solid black; */
 }
 
-#LineBar>span{
-    height:24px;
-    width:auto;
+#LineBar>span {
+    height: 24px;
+    width: auto;
     padding: 8px;
     margin-left: -5px;
-}
-#dealsBar{
-    height:40px;
-    width:1000px;
-    border:1px solid black;
-    display: flex;
-}
-.LineBar-name{
-    height:24px;
-    width:auto;
-    padding: 8px;
-    border:1px solid black;
-    text-align: center;
-    
+    color: white;
 }
 
-#onlyEleDeal{
-    height:40px;
-    width:350px;
-    border:1px solid black;
+#dealsBar {
+    height: 40px;
+    width: 1000px;
+    /* border:1px solid black; */
+    display: flex;
 }
-#inElDeal{
-    height:25px;
-    width:180px;
+
+.LineBar-name {
+    height: 24px;
+    width: auto;
+    padding: 8px;
+    text-align: center;
+    color: white;
+
+}
+
+.LineBar-name:hover {
+    border: 1px solid white;
+}
+
+#onlyEleDeal {
+    height: 40px;
+    width: 350px;
+    /* border:1px solid black; */
+}
+
+#inElDeal {
+    height: 25px;
+    width: 180px;
     margin-top: 7px;
     margin-left: 170px;
     text-align: center;
-    border:1px solid black;
+    color: white;
+
 }
 
+#inElDeal:hover {
+    border: 1px solid white;
+}
+
+#bg-add>img {
+    width: 100%;
+    /* border:1px solid black; */
+}
+
+#large-div {
+    position: absolute;
+    margin-top: -45vh;
+    height: 500px;
+    width: 99%;
+    border: 1px solid black;
+    display: flex;
+    justify-content: space-around;
+
+}
+
+.comparment {
+    height: 480px;
+    width: 350px;
+    margin-top: 10px;
+    border: 1px solid black;
+    background-color: white;
+}
+
+.headName {
+    margin-left: 10px;
+}
+
+.show-cat {
+    height: 170px;
+    width: 325px;
+    margin: 10px;
+    border: 1px solid black;
+    display: flex;
+    justify-content: space-between;
+}
+
+.i-box {
+    height: 170px;
+    width: 150px;
+    border: 1px solid black;
+}
+
+.i-pic {
+    height: 140px;
+    width: 100%;
+    object-fit: cover;
+    border: 1px solid black;
+}
+
+.i-descri {
+    margin-top: -5px;
+    font-size: small;
+}
+
+.bigger-i-box {
+    height: 360px;
+    width: 330px;
+    margin-left: 10px;
+    border: 1px solid black;
+}
+
+.bigger-i-pic {
+    height: 360px;
+    width: 100%;
+    object-fit: cover;
+    border: 1px solid black;
+}
+
+.foot-text {
+    margin: 10px;
+}
+
+.smaller-com {
+    height: 160px;
+    width: 100%;
+    border: 1px solid black;
+}
+
+.yel-sign {
+    height: 25px;
+    width: 315px;
+    padding-top: 5px;
+    border-radius: 10px;
+    margin-top: 40px;
+    margin-left: 15px;
+    text-align: center;
+    border: 1px solid black;
+    background-color: #FFD814;
+}
+
+.add-pic {
+    height: 280px;
+    width: 80%;
+    margin-left: 10%;
+    margin-top: 5%;
+    border: 1px solid balck;
+}
+
+#large-divChain {
+    margin-top: 11%;
+    height: 500px;
+    width: 100%;
+    border: 1px solid black;
+    display: flex;
+    justify-content: space-around;
+
+}
+
+body {
+    background-color: #E3E6E6
+}
+
+.singleRow {
+    height: 400px;
+    width: 100%;
+    border: 1px solid black;
+}
+
+.rowTitle-div {
+    display: flex;
+    height: 50px;
+    width: 95%;
+    margin-left: 35px;
+    border: 1px solid black;
+}
+
+.rowTitle-div>span {
+    margin-top: 25px;
+    margin-left: 10px;
+    color: #48778e;
+}
+
+.divAlign-row {
+    height: 300px;
+    width: 95%;
+    margin-left: 35px;
+    border: 1px solid black;
+    display: flex;
+    justify-content: space-between;
+}
+
+.eachItem {
+    height: 300px;
+    width: 220px;
+    border: 1px solid black;
+}
+
+.eachItem-drag {
+    height: 300px;
+    width: 190px;
+    border: 1px solid black;
+}
+
+.eachItem-pic-div {
+    height: 200px;
+    width: 100%;
+    border: 1px solid black;
+}
+
+.eachItem-pic {
+    width: 220px;
+    margin-top: 20px;
+    object-fit: cover;
+    border: 1px solid black;
+}
+
+.eachItem-pic-other {
+    width: 120px;
+    margin-top: 15px;
+    margin-left: 50px;
+    object-fit: cover;
+    border: 1px solid black;
+}
+.eachItem-pic-other1{
+     width: 170px;
+  margin-top: 5px;
+    margin-left: 20px;
+    object-fit: cover;
+    border: 1px solid black;
+}
+.red-box {
+    height: 40px;
+    width: auto;
+    color: white;
+    border: 1px solid #cc0c39;
+    background-color: #cc0c39;
+}
+
+.text-red {
+    color: #cc0c39;
+    margin-left: 5px;
+
+}
+
+.newRate {
+    opacity: 0.6;
+    margin-left: 2px;
+}
