--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@
 
 #ALL {
     height: 49px;
-    border-right: 1px solid black;
+    /* border-right: 1px solid black; */
 }
 
 #Search-in {
@@ -268,7 +268,7 @@
     margin-top: -45vh;
     height: 500px;
     width: 99%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     justify-content: space-around;
 
@@ -278,7 +278,7 @@
     height: 480px;
     width: 350px;
     margin-top: 10px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     background-color: white;
 }
 
@@ -290,7 +290,7 @@
     height: 170px;
     width: 325px;
     margin: 10px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     justify-content: space-between;
 }
@@ -298,14 +298,18 @@
 .i-box {
     height: 170px;
     width: 150px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .i-pic {
     height: 140px;
     width: 100%;
     object-fit: cover;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+}
+.i-pic:hover{
+    width:105%;
+    height:150px;
 }
 
 .i-descri {
@@ -317,14 +321,14 @@
     height: 360px;
     width: 330px;
     margin-left: 10px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .bigger-i-pic {
     height: 360px;
     width: 100%;
     object-fit: cover;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .foot-text {
@@ -334,7 +338,7 @@
 .smaller-com {
     height: 160px;
     width: 100%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .yel-sign {
@@ -345,7 +349,7 @@
     margin-top: 40px;
     margin-left: 15px;
     text-align: center;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     background-color: #FFD814;
 }
 
@@ -361,7 +365,7 @@
     margin-top: 11%;
     height: 500px;
     width: 100%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     justify-content: space-around;
 
@@ -374,7 +378,7 @@ body {
 .singleRow {
     height: 400px;
     width: 100%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     background-color: white;
 }
 
@@ -383,7 +387,7 @@ body {
     height: 50px;
     width: 95%;
     margin-left: 35px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .rowTitle-div>span {
@@ -396,14 +400,14 @@ body {
     height: 300px;
     width: 95%;
     margin-left: 35px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     overflow: hidden;
 }
 .divAlign-row {
     height: 300px;
     width: 110%;
     /* margin-left: 35px; */
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     justify-content: space-between;
 }
@@ -412,7 +416,7 @@ body {
     height: 300px;
     width: 130%;
     /* margin-left: 35px; */
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     justify-content: space-between;
 }
@@ -420,61 +424,79 @@ body {
 .eachItem {
     height: 300px;
     width: 220px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .eachItem-drag {
     height: 300px;
     width: 190px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .eachItem-pic-div {
     height: 200px;
     width: 100%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 
 .eachItem-pic {
     width: 220px;
     margin-top: 20px;
     object-fit: cover;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+}
+.eachItem-pic:hover{
+    width: 230px;
 }
 .eachItem-pic-moreBig {
     height:280px;
     width: 288px;
     margin-top: 10px;
     object-fit: cover;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+}
+.eachItem-pic-moreBig:hover{
+    width: 295px;
 }
 .eachItem-pic-other {
     width: 120px;
     margin-top: 15px;
     margin-left: 50px;
     object-fit: cover;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+}
+.eachItem-pic-other:hover{
+    width: 130px;
 }
 .eachItem-pic-other1 {
     width: 170px;
     margin-top: 5px;
     margin-left: 20px;
     object-fit: cover;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+}
+.eachItem-pic-other1:hover{
+    width: 180px;
 }
 .eachItem-pic-phone {
     width: 80px;
     margin-top: 10px;
     margin-left: 50px;
     object-fit: cover;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+}
+.eachItem-pic-phone:hover{
+    width:90px;
 }
 .seprate-pic{
     height:200px;
     width:65px;
    margin-left:40%;
     object-fit: cover;
-    border:1px solid black;
+    /* border:1px solid black; */
+}
+.seprate-pic:hover{
+    width:75px;
 }
 .red-box {
     height: 40px;
@@ -494,7 +516,8 @@ body {
 .next-div {
     height: 100px;
     width: 50px;
-    border: 1px solid black;
+    border: 1px solid grey;
+    border-radius: 10px;
     position: absolute;
     margin-left: 92%;
     margin-top: 5%;
@@ -513,14 +536,15 @@ body {
 .show-pic-items{
     height:352px;
     width:100%;
-    border:1px solid black;
+    /* border:1px solid black; */
     background-color: white;
 }
 
 .prev-div {
     height: 100px;
     width: 50px;
-    border: 1px solid black;
+    border: 1px solid grey;
+    border-radius: 10px;
     position: absolute;
     margin-right: 92%;
     margin-top: 5%;
@@ -534,17 +558,17 @@ body {
 .eachItem-big{
     height: 300px;
     width: 290px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
 }
 .large-divChain-other {
     height: 500px;
     width: 100%;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: flex;
     justify-content: space-around;}
 
     .small-align-div{
-        border:1px solid black;
+        /* border:1px solid black; */
         height:120px;
         width:100%;
         display:flex;
@@ -563,27 +587,28 @@ body {
     .small-show-pic{
         width:25px;
         object-fit:cover;
-        border: 1px solid black;
+        /* border: 1px solid black; */
         margin-left: 25px;
         margin-top: 5px;
     }
     .small-show-pic-edit{
         width: 20px;
         object-fit:cover;
-        border: 1px solid black;
+        /* border: 1px solid black; */
         margin-left: 25px;
         margin-top: 5px;
     }
     .last-outline{
-        height:350px;
+        height:490px;
         width:100%;
-        border:1px solid black;
+        /* border:1px solid black; */
+        background-color: white;
     }
     .last-head-sec{
         height:35px;
         width:95%;
         margin-left: 2%;
-        border:1px solid black;
+        /* border:1px solid black; */
         display: flex;
         justify-content: space-between;
     }
@@ -591,38 +616,64 @@ body {
         margin-top: 5px;
     }
     .forprevNext{
-        height:310px;
+        height:450px;
         width:55px;
-        border:1px solid black;
+        /* border:1px solid black; */
     }
     .toMakenext{
         height:20px;
         width:20px;
         padding: 10px;
-        margin-top: 130px;
+        margin-top: 200px;
         margin-left: 5px;
         border:1px solid black;
         border-radius: 10px;
         font-size: larger;
         font-weight: bolder;
         text-align: center;
+        opacity: 0.4;
+    }
+    .toMakenext:hover{
+        opacity: 1;
     }
     .inner-aligner-div{
-        height:310px;
+        height:450px;
         width: 100%;
-        border:1px solid black;
+        /* border:1px solid black; */
         display: flex;
     }
     .div-to-arrrange-show-items{
-        height:310px;
+        height:450px;
         width: 93%;
-        border: 1px solid black;
+        /* border: 1px solid black; */
     }
     .show-item-inner{
-        height:310px;
+        height:450px;
         width:100%;
-        border:1px solid black;
+        /* border:1px solid black; */
         display: flex;
-        justify-content: ;
+        justify-content:space-evenly;
     }
+    .last-inner-div{
+        height:440px;
+        width:160px;
+        /* border:1px solid black; */
+    }
+    .last-sofa-des{
+     color: #3c8d99;
+    }
+    .star-div{
+        /* border:1px solid black; */
+        
+    }
+   .fa-star,.fa-star-half-full{
+     math-style: compact;
+    color: #ffa31c ;  
+   }
+   .twoOff{
+    opacity: 0.6;
+   }
+   .sofa-pics:hover{
+   width: 180px;
+   }
    
